Added hackasaurus.js which hides the view checkboxes and forces display of HTML and live preview. Changed default code for a new document to empty JS and a trivial HTML5-compliant document, inspired by Tantek's 'HTML5 Now'--this required modifying app.php though, might be nicer for app.php to pull override info from config.php or someplace else. This commit also hides the JS library menu and jsbin.tumblr.com help link.

--- a/css/style.css
+++ b/css/style.css
@@ -1281,3 +1281,12 @@ span.CodeMirror-selected {
 .CodeMirror-lines pre.CodeMirror-cursor {
 /*  white-space: pre;*/
 }
+
+/* Hackasaurus changes */
+.code.html label, .code.html #library, div#control .help {
+  display: none;
+}
+
+span#panelsvisible {
+  display: none;
+}
