change warning bg color from yellow to lemonchiffon so it's less loud.

--- a/css/style.css
+++ b/css/style.css
@@ -1300,7 +1300,7 @@ div#temporary-caveat {
   position: fixed;
   bottom: 0px;
   left: 0px;
-  background-color: yellow;
+  background-color: lemonchiffon;
   border-top: 1px solid black;
   padding: 5px;
   z-index: 50000;
